Actualizar estilos de la barra de navegación y agregar enlace de contacto

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
-
 import Navbar from '../components/navbar.jsx';
+import Description from '../components/description.jsx';
 ---
 
 <html lang="en">
@@ -11,8 +11,9 @@ import Navbar from '../components/navbar.jsx';
 		<meta name="generator" content={Astro.generator} />
 		<title>HeysonBR</title>
 	</head>
-	<body>
+	<body class="bg-gradient-to-r from-cyan-500 to-blue-500">
 		<Navbar />
+		<Description />
 		<h1>Astro</h1>
 	</body>
 </html>
