Actualizar estilos de la barra de navegación y agregar enlace de contacto

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Navbar from '../components/navbar.jsx';
 import Description from '../components/description.jsx';
+import Proyects from '../components/proyects.jsx';
 ---
 
 <html lang="en">
@@ -11,9 +12,10 @@ import Description from '../components/description.jsx';
 		<meta name="generator" content={Astro.generator} />
 		<title>HeysonBR</title>
 	</head>
-	<body class="bg-gradient-to-r from-cyan-500 to-blue-500">
+	<body class="bg-gradient-to-r from-slate-900 to-slate-700">
 		<Navbar />
 		<Description />
-		<h1>Astro</h1>
+		<Proyects />
+		
 	</body>
 </html>
