Actualizar estilos de la barra de navegación y agregar enlace de contacto

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Navbar from '../components/navbar.jsx';
 import Description from '../components/description.jsx';
 import Proyects from '../components/proyects.jsx';
+import Stack from '../components/stack.jsx';
 ---
 
 <html lang="en">
@@ -16,6 +17,6 @@ import Proyects from '../components/proyects.jsx';
 		<Navbar />
 		<Description />
 		<Proyects />
-		
+		<Stack />
 	</body>
 </html>
