--- a/src/pages/layout.astro
+++ b/src/pages/layout.astro
@@ -1,6 +1,7 @@
 ---
 import Navbar from '../components/navbar.jsx';
 import Footer from '../components/Footer.astro';
+
 ---
 <html lang="en">
   <head>
@@ -10,12 +11,14 @@ import Footer from '../components/Footer.astro';
     <meta name="generator" content={Astro.generator} />
     <title>{Astro.props.title}</title>
   </head>
-  <body class="bg-gradient-to-r from-slate-900 to-slate-700 text-white">
+  <body class="bg-gradient-to-b from-black to-slate-700 text-white">
+    
     <Navbar />
     <main>
       <slot /> <!-- Aquí es donde se renderizará el contenido de la página -->
     </main>
     <Footer/>
+    
   </body>
 </html>
 
