Actualizar componente de partículas y estilos en la página de inicio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,10 @@ import {SobreMi} from '../components/sobremi.jsx';
 
 ---
 
-
-   <Layout title="HeysonBR">
+   
+  <Layout title="HeysonBR">
       
-      <Description />
+      <Description client:load/>
       <Proyects />
       <Stack />
       <Contributions client:load/>
