Actualizar estilos y agregar descripción en el componente de descripción

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import {SobreMi} from '../components/sobremi.jsx';
    
   <Layout title="HeysonBR">
       
-      <Description client:load/>
+      <Description client:load disponible="Disponible para Trabajar" hola="Hola, soy Heyson"/>
       <Proyects />
       <Stack />
       <Contributions client:load/>
