--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,21 @@
 ---
-import Navbar from '../components/navbar.jsx';
+import Navbar from '../components/navbar.astro';
 import Description from '../components/description.jsx';
 import Proyects from '../components/proyects.jsx';
 import Stack from '../components/stack.jsx';
 import Layout from './layout.astro'
 import Contributions from '../components/Contributions.jsx';
 import {SobreMi} from '../components/sobremi.jsx';
+import { getRelativeLocaleUrl } from 'astro:i18n';
+export let locale;
+let otherLocale = locale === 'en' ? 'es' : 'en';
+let href = getRelativeLocaleUrl(otherLocale, 'index');
+
 
 ---
 
    
-  <Layout title="HeysonBR">
+  <Layout title="HeysonBR"  locale={locale} href={href}>
       
       <Description client:load disponible="Disponible para Trabajar" hola="Hola, soy Heyson"/>
       <Proyects />
