Actualizar estilos y corregir errores en el componente Navbar

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -1,5 +1,5 @@
 ---
-export let href;
+
 ---
 
 <div>
@@ -10,7 +10,7 @@ export let href;
       <a href="mailto:heysonbr@gmail.com" class="px-2 hover:text-purple-300">Contacto</a>
     </div>
   </nav>
-  <nav class="text-white fixed top-0 right-4 rounded-full backdrop-blur-sm bg-white/30  z-10 my-2 p-1 px-2">
-    <a href={href}>EN/ES</a>
-  </nav>
+  <!-- <nav class="text-white fixed top-0 right-4 rounded-full backdrop-blur-sm bg-white/30  z-10 my-2 p-1 px-2">
+    <a href={urlEn}>EN</a> / <a href={urlEs}>ES</a>
+  </nav> -->
 </div>
