--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -4,10 +4,11 @@
 
 <div>
   <nav class="container fixed top-0 left-0 right-0 w-96 mx-auto flex justify-center p-1 my-2 rounded-full backdrop-blur-sm bg-white/30  z-10" >
-    <div class="links w-full flex justify-around mx-4 ">
+    <div class="links w-full flex justify-around mx-2 ">
       <a href="/#inicio" class="px-2 hover:text-purple-300">Inicio</a>
       <a href="/#proyectos" class="px-2 hover:text-purple-300">Proyectos</a>
       <a href="/#sobre-mi" class="px-2 hover:text-purple-300">Sobre Mi</a>
+      <a href="/blog" class="px-2 hover:text-purple-300">Blog</a>
       <a href="mailto:heysonbr@gmail.com" class="px-2 hover:text-purple-300">Contacto</a>
     </div>
   </nav>
