--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -8,7 +8,7 @@
       <a href="/#inicio" class="px-2 hover:text-purple-300">Inicio</a>
       <a href="/#proyectos" class="px-2 hover:text-purple-300">Proyectos</a>
       <a href="/#sobre-mi" class="px-2 hover:text-purple-300">Sobre Mi</a>
-      <a href="/blog" class="px-2 hover:text-purple-300">Blog</a>
+      <!-- <a href="/blog" class="px-2 hover:text-purple-300">Blog</a> -->
       <a href="mailto:heysonbr@gmail.com" class="px-2 hover:text-purple-300">Contacto</a>
     </div>
   </nav>
