--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layout.astro";
 import Buscador from "../../components/blog/buscadorProyectos";
+import '../../global.css';
 ---
 
 <Layout title="BLOG">
