Actualizar enlace a la página de proyectos en el componente BuscadorProyectos.jsx

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -7,7 +7,9 @@ import '../../global.css';
 <Layout title="BLOG">
     <div class="mt-20 flex flex-col justify-center items-center">
  <h2 class="text-4xl font-bold">BLOG</h2>
-  <div>  <Buscador client:load/></div>
+  <div> 
+    <!-- <a href="/blog/misproyectos"></a>  -->
+     <Buscador client:load/></div>
 
       
 
