Actualizar enlace a la página de proyectos en el componente Navbar.astro

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -4,7 +4,7 @@
 
 <div>
   <nav class="container fixed top-0 left-0 right-0 w-96 mx-auto flex justify-center p-1 my-2 rounded-full backdrop-blur-sm bg-white/30  z-10" >
-    <div class="links w-full flex justify-around mx-2 ">
+    <div class="links w-full flex justify-around mx-0 md:mx-2 ">
       <a href="/#inicio" class="px-2 hover:text-purple-300">Inicio</a>
       <a href="/#proyectos" class="px-2 hover:text-purple-300">Proyectos</a>
       <a href="/#sobre-mi" class="px-2 hover:text-purple-300">Sobre Mi</a>
